Remove more usages of annimon.stream.
Resolves #14717