@@ -19,7 +19,6 @@ import androidx.navigation.Navigation;
 import androidx.recyclerview.widget.GridLayoutManager;
 import androidx.recyclerview.widget.RecyclerView;
 
-import com.annimon.stream.Stream;
 import com.google.android.material.dialog.MaterialAlertDialogBuilder;
 
 import org.signal.core.util.ClearClipboardAlarmReceiver;
@@ -35,6 +34,7 @@ import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.IntStream;
 
 public class PaymentsRecoveryPhraseFragment extends Fragment {
 
@@ -69,10 +69,9 @@ public class PaymentsRecoveryPhraseFragment extends Fragment {
       setUpForDisplay(message, next, edit, copy, words, args);
     }
 
-    List<MnemonicPart> parts = Stream.of(words)
-                                     .mapIndexed(MnemonicPart::new)
-                                     .sorted(new MnemonicPartComparator(words.size(), SPAN_COUNT))
-                                     .toList();
+    List<MnemonicPart> parts = IntStream.range(0, words.size()).boxed()
+                                     .map(index -> new MnemonicPart(index, words.get(index)))
+                                     .sorted(new MnemonicPartComparator(words.size(), SPAN_COUNT)).collect(java.util.stream.Collectors.toList());
 
     MnemonicPartAdapter adapter = new MnemonicPartAdapter();
 
